# tandemx

./: .dockerignore  .env.example  .env.turso  .gitignore  BUN.md  Dockerfile  POCKETS_RADIO_SUMMARY.md  SHOP_README.md  TURSO_README.md  blog_schema.sql  calendar_astronomical.sql  calendar_core.sql  docker-compose.yaml  docker-compose.yml  export_data.sql  findry_tandemx_integration.md  fly.toml  gleam.toml  index.html  manifest.toml  message.txt  minimap.md  pyproject.toml  revu.md  rmarket.md  roadmap.md  run.sh  schema.sql  setup_realtime.sh  sledge  tandemx.db  tandemx_design.md  variety_shop.db  website_schema.sql
client/: INVENTORY_README.md  README.md  TROUBLESHOOTING.md  ads.html  art_techniques.html  bun-start.js  bun-turso.js  campaign-form.css  cards.html  chartspace.css  chartspace.html  constructs.html  contracts.html  divvyqueue.html  fix-css.js  form_analyzer.html  gleam.toml  index.html  index2.html  manifest.toml  overview.md  package-lock.json  package.json  partner_progress.html  projects.html  revu.html  run.sh  setenv.sh  settings.html  spaceport.css  spacesuit.css  start_doc.md  styles.css  styles.html  supabase-test.html  tax.html  test-db.js  test-inventory.js  test-supabase.js  test-turso.js  (+3 more)
scanprint/: .gitignore  CONTRIBUTING.md  PROJECT_HEADERS.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  run.py  run_demo.py
scanprint/labels/templates/: default.txt  price_tag.txt  zebra_zd411.txt
scanprint/scanprint/: __init__.py  main.py
scanprint/utils/: __init__.py  inventory.py  labelgen.py  printer.py
server/: .disable_db  (+6 more)
(+298 files in other folders)
