[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanprint"
version = "0.1.0"
description = "A PyQt6 desktop app for scanning UPCs, looking up item data, and generating printable labels for overstock/liquidation retail inventory"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Retail Solutions Team"},
]
dependencies = [
    "PyQt6>=6.4.0",
    "pandas>=1.5.0",
    "reportlab>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
scanprint = "scanprint.main:main"

[tool.setuptools]
packages = ["scanprint", "utils"]
package-data = {scanprint = ["inventory/*", "labels/*"]}

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"